cfg Filter CORS

--- a/beer/src/main/webapp/WEB-INF/web.xml
+++ b/beer/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
          version="3.0">
 
-    <display-name>clubprivate</display-name>
+    <display-name>beer</display-name>
 
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
@@ -12,7 +12,7 @@
 
     <filter>
         <filter-name>mobileCORSFilter</filter-name>
-        <filter-class>br.com.clubprivate.filter.MobileCORSFilter</filter-class>
+        <filter-class>br.com.beer.filter.MobileCORSFilter</filter-class>
     </filter>
 
     <filter-mapping>
